@@ -36,11 +36,11 @@
  * MAGIX CMS
  * @category   admin
  * @package    Exec Files
- * @copyright  MAGIX CMS Copyright (c) 2010 Gerits Aurelien, 
+ * @copyright  MAGIX CMS Copyright (c) 2008 - 2013 Gerits Aurelien,
  * http://www.magix-cms.com, magix-cms.com http://www.magix-cjquery.com
  * @license    Dual licensed under the MIT or GPL Version 3 licenses.
- * @version    1.2
- * @author Gérits Aurélien <aurelien@magix-cms.com>
+ * @version    2.0
+ * @author Gérits Aurélien <aurelien@magix-cms.com> <aurelien@magix-dev.be>
  * @name config
  *
  */
