@@ -36,10 +36,10 @@
  * MAGIX CMS
  * @category   Controller 
  * @package    backend
- * @copyright  MAGIX CMS Copyright (c) 2010 Gerits Aurelien, 
+ * @copyright  MAGIX CMS Copyright (c) 2008 - 2013 Gerits Aurelien,
  * http://www.magix-cms.com, http://www.magix-cjquery.com
  * @license    Dual licensed under the MIT or GPL Version 3 licenses.
- * @version    1.1
+ * @version    2.0
  * @author Gérits Aurélien <aurelien@magix-cms.com> <aurelien@magix-dev.be>
  * @name dashboard
  *
@@ -129,7 +129,7 @@ class backend_controller_dashboard extends backend_db_dashboard{
             }
         }else{
             $create->addConfigFile(array(
-                    'modules'
+                    'dashboard'
                 ),array('dashboard_'),false
             );
             // Assigne un tableau des langues
