@@ -36,10 +36,10 @@
  * MAGIX CMS
  * @category   Controller 
  * @package    backend
- * @copyright  MAGIX CMS Copyright (c) 2010 Gerits Aurelien, 
+ * @copyright  MAGIX CMS Copyright (c) 2008 - 2013 Gerits Aurelien,
  * http://www.magix-cms.com, http://www.magix-cjquery.com
  * @license    Dual licensed under the MIT or GPL Version 3 licenses.
- * @version    1.2
+ * @version    2.0
  * @author Gérits Aurélien <aurelien@magix-cms.com> <aurelien@magix-dev.be>
  * @name editor
  *
@@ -122,6 +122,11 @@ EOT;
 	 */
 	public function run(){
 		$header= new magixglobal_model_header();
+        $create = new backend_controller_template();
+        $create->addConfigFile(array(
+                'config'
+            ),array('config_'),false
+        );
 		if(magixcjquery_filter_request::isGet('htmleditor')){
 			self::send_wysiwyg_editor();
 		}elseif(magixcjquery_filter_request::isGet('manager_editor_setting')){
