@@ -33,11 +33,16 @@
 # needs please refer to http://www.magix-cms.com for more information.
 */
 /**
- * Author: Gerits Aurelien <aurelien[at]magix-cms[point]com>
- * Copyright: MAGIX CMS
- * Date: 5/01/13
- * Time: 16:38
- * License: Dual licensed under the MIT or GPL Version
+ * MAGIX CMS
+ * @category   Controller
+ * @package    backend
+ * @copyright  MAGIX CMS Copyright (c) 2008 - 2013 Gerits Aurelien,
+ * http://www.magix-cms.com, http://www.magix-cjquery.com
+ * @license    Dual licensed under the MIT or GPL Version 3 licenses.
+ * @version    2.0
+ * @author Gérits Aurélien <aurelien@magix-cms.com> <aurelien@magix-dev.be>
+ * @name theming
+ *
  */
 class backend_controller_theming extends backend_db_theming{
     /**
